--- a/styles.less
+++ b/styles.less
@@ -1,3 +1,31 @@
-body {
-   
+
+/* Required for sticky footer */
+html {
+   height: 100%;
+}
+
+/* Use flexbox to implement a simple sticky footer */
+.Movies {
+   min-height: 100%;
+   display: flex;
+   flex-direction: column;
+   margin: 0;
+
+   /* Apply some basic styling to the header to make it a bit nicer */
+   header {
+      background-color: #0082c8;
+      color: #fff;
+      box-shadow: inset 0 0 2px 0 rgba(0, 0, 0, 0.75);
+      padding: 0 10px;
+   }
+
+   main {
+      display: flex;
+      flex: 1;
+   }
+
+   /* Put the footer text in the center of the page */
+   footer {
+      text-align: center;
+   }
 }
