8: Added searchbox with debounce

--- a/modules/widgets/MovieList.less
+++ b/modules/widgets/MovieList.less
@@ -2,6 +2,7 @@
  * These are the styles for the MovieList
  */
 .MovieList {
+   padding-left: 20px;
 
    &__item {
       /* Hide the bullets on the list items */
